# telefeed

./: .env.example  .gitignore  CHANGELOG.md  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
telefeed/: __init__.py  __main__.py  ai_filter.py  cli.py  client.py  config.py  display.py  engine.py  filters.py  notifications.py  service.py  store.py
telefeed/web/: __init__.py  server.py
tests/: conftest.py  test_ai_filter.py  test_cli.py  test_client.py  test_config.py  test_filters.py  test_notifications.py  test_service.py  test_store.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: main.js  style.css
