[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telefeed"
version = "0.1.0"
description = "Personalized Telegram feed aggregator"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "click>=8.1.7",
]

[project.scripts]
telefeed = "telefeed.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["telefeed*"]
