[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telefeed"
version = "0.4.1"
description = "Personalized Telegram feed aggregator"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "click>=8.1.7",
    "google-genai>=0.1.1",
    "platformdirs>=4.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
openai     = ["openai>=1.0.0"]
anthropic  = ["anthropic>=0.25.0"]
all-ai     = ["openai>=1.0.0", "anthropic>=0.25.0"]
test       = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=4.1.0"]

[project.scripts]
telefeed = "telefeed.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["telefeed*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:google.genai.*",
]

[tool.setuptools.package-data]
"telefeed" = ["web/static/**/*"]
